// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create shapshot of when url is not undefined 1`] = `
<body>
  <div>
    <div
      class="ui-avatar"
      data-uses-unhanded-props="true"
    >
      <img
        aria-hidden="true"
        class="ui-image"
        data-aa-class="AvatarImage"
        data-uses-unhanded-props="true"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAAMSURBVBhXY/j//z8ABf4C/qc1gYQAAAAASUVORK5CYII="
        title="HR Taskforce"
      />
    </div>
  </div>
</body>
`;

exports[`create shapshot of when url is undefined 1`] = `
<body>
  <div>
    <div
      class="ui-avatar"
      data-uses-unhanded-props="true"
    >
      <span
        class="ui-label"
        data-uses-unhanded-props="true"
        title="HR Taskforce"
      >
        HT
      </span>
    </div>
  </div>
</body>
`;
